Img Clipping Fix

--- a/src/styles/AppDetails.scss
+++ b/src/styles/AppDetails.scss
@@ -21,7 +21,6 @@
         img {
             width: 120px;
             height: 120px;
-            padding-left: 10px;
             background-color: rgba(255,255,255,0.40);
             clip-path: circle(50% at 50% 50%);
         }
